fix: fixed the scrollbar for event mfe and correct insert of created event (in relation to ongoing, upcoming, past events list)

--- a/client/projects/event/src/app/event/event.component.scss
+++ b/client/projects/event/src/app/event/event.component.scss
@@ -28,17 +28,23 @@
 }
 
 .container {
-  height: 100%;
-  width: 100%;
-  display: block;
-  flex-direction: column;
-  align-items: center;
+  //height: 100%;
+  //width: 100%;
+  //display: flex;
+  //flex-direction: column;
+  //align-items: center;
+  //overflow-y: scroll;
   //max-width: 32em;
   //min-width: 32em;
 }
 
 :host {
   overflow-y: auto;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   // height: 100%; <--- muss manchmal auch hinzugefügt werden damit der Scroll funktioniert
 }
 
